[gd_scene load_steps=21 format=3 uid="uid://cc8vj546iycrv"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_vh0yr"]
[ext_resource type="Texture2D" uid="uid://dit8doaqe2wo8" path="res://assets/textures/angryBoss.png" id="2_m2gw3"]
[ext_resource type="Texture2D" uid="uid://c3vbmp5u45f4h" path="res://assets/textures/boss-Sheet.png" id="2_okdi0"]
[ext_resource type="Texture2D" uid="uid://doucfpebbc6wc" path="res://assets/textures/bossHealth3.png" id="4_6ce1c"]
[ext_resource type="Texture2D" uid="uid://bktjenfcvgr01" path="res://assets/textures/bossHealth.png" id="5_6u2ea"]
[ext_resource type="Texture2D" uid="uid://ddjm2vune46c4" path="res://assets/textures/bossHealth2.png" id="6_spl8w"]
[ext_resource type="AudioStream" uid="uid://ci5kfdohpqs1o" path="res://assets/audio/BossDeath.ogg" id="7_kt8k2"]
[ext_resource type="AudioStream" uid="uid://bucvulrf776o3" path="res://assets/audio/BossBuzz.ogg" id="8_lrbgy"]
[ext_resource type="AudioStream" uid="uid://bl83fx1drkli5" path="res://assets/audio/BossHurt/BossHurt01.ogg" id="9_dyuxs"]
[ext_resource type="AudioStream" uid="uid://buwi20ekseah3" path="res://assets/audio/BossHurt/BossHurt02.ogg" id="10_a8o2p"]
[ext_resource type="AudioStream" uid="uid://nfepfm24fxbh" path="res://assets/audio/BossHurt/BossHurt03.ogg" id="11_p85ey"]
[ext_resource type="AudioStream" uid="uid://b3igy7oolgstx" path="res://assets/audio/BossHurt/BossHurt04.ogg" id="12_2otm6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lnkgp"]
atlas = ExtResource("2_m2gw3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ne0"]
atlas = ExtResource("2_m2gw3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5xh2"]
atlas = ExtResource("2_okdi0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fas53"]
atlas = ExtResource("2_okdi0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_plprm"]
atlas = ExtResource("2_okdi0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmw83"]
atlas = ExtResource("2_okdi0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvkg3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnkgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ne0")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5xh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fas53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plprm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmw83")
}],
"loop": true,
"name": &"fly",
"speed": 24.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y8l30"]
streams_count = 4
stream_0/stream = ExtResource("9_dyuxs")
stream_1/stream = ExtResource("10_a8o2p")
stream_2/stream = ExtResource("11_p85ey")
stream_3/stream = ExtResource("12_2otm6")

[node name="Boss" type="Area2D"]
scale = Vector2(7, 7)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_vh0yr")

[node name="SpriteSheet" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lvkg3")
animation = &"fly"

[node name="Collision" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.995275, 1.00934)
polygon = PackedVector2Array(11.4828, -17.2673, 20.5256, -11.0397, 24.8316, 2.26456, 25.1187, 9.9075, 25.8364, 16.9842, 24.5445, 19.5319, 19.8079, 21.7964, 10.7652, 20.3811, -0.287071, 23.6364, -10.9087, 20.2395, -19.2337, 20.8057, -26.1234, 18.9657, -25.9799, 3.67991, -16.6501, -8.20904, -8.75566, -9.90746, -1.14828, -15.2858)

[node name="Timer" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="Node2D"]
offset_left = -39.5714
offset_top = 31.1429
offset_right = 260.429
offset_bottom = 51.1429
scale = Vector2(0.285714, 0.275862)
max_value = 300.0
texture_under = ExtResource("4_6ce1c")
texture_over = ExtResource("5_6u2ea")
texture_progress = ExtResource("6_spl8w")
tint_under = Color(1, 1, 1, 0.501961)

[node name="SFX" type="Node" parent="."]

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_kt8k2")
volume_db = -9.109
pitch_scale = 0.71

[node name="Buzzing" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_lrbgy")
volume_db = -10.0
pitch_scale = 0.8
autoplay = true
parameters/looping = true

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_y8l30")
volume_db = 0.759
pitch_scale = 1.7

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
